--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_NAME = gonzeddb
 DB_USER = postgres
 DB_PASSWORD = password
 DB_HOST = database-1.cywqzpog5m3j.us-east-1.rds.amazonaws.com
-ALLOWED_HOSTS=.localhost, .34.205.30.161
+ALLOWED_HOSTS=.localhost, .34.205.30.161, .gonzed.ddns.net
