--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY = 84it)2uv(ffa$ld-ie5s4cf_!4buz5(cumfsa9z8i%ah+#817(
-DEBUG = False
+DEBUG = True
 DB_NAME = gonzeddb
 DB_USER = postgres
 DB_PASSWORD = password
